[gd_scene load_steps=3 format=3 uid="uid://cxa0gi0b51v2a"]

[ext_resource type="FontFile" uid="uid://dl3wpxxkxs5yf" path="res://Assets/Fonts/MatrixtypeDisplayBold.ttf" id="1_28flt"]
[ext_resource type="Script" uid="uid://do7qqta2je3hm" path="res://Scenes/main_menu.gd" id="1_48xlc"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_48xlc")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="Title" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.5
offset_top = -156.0
offset_right = 84.5
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_28flt")
theme_override_font_sizes/font_size = 60
text = "Pong"

[node name="Condition" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.5
offset_top = -84.0
offset_right = 180.5
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_28flt")
theme_override_font_sizes/font_size = 24
text = "First to 8 wins!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Controls" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.5
offset_top = 276.0
offset_right = 180.5
offset_bottom = 306.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_28flt")
theme_override_font_sizes/font_size = 24
text = "Controls: W (Up) * A (Down)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.5
offset_top = 4.0
offset_right = 99.5
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Easy" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_28flt")
theme_override_font_sizes/font_size = 32
text = "Easy
"

[node name="Medium" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_28flt")
theme_override_font_sizes/font_size = 32
text = "Medium
"

[node name="Hard" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_28flt")
theme_override_font_sizes/font_size = 32
text = "Hard
"

[connection signal="pressed" from="VBoxContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="VBoxContainer/Medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="VBoxContainer/Hard" to="." method="_on_hard_pressed"]
